Weather App - V0.1 - Add Convert

--- a/src/WeatherInfo.css
+++ b/src/WeatherInfo.css
@@ -17,6 +17,12 @@ ul {
   font-size: 30px;
   color: rgb(41 0 177);
 }
+.unit {
+  text-align: center;
+  font-size: 20px;
+  color: rgb(24, 0, 101);
+}
+
 #locationbtn {
   font-size: 15px;
   margin-left: 70px;
