--- a/src/WeatherInfo.css
+++ b/src/WeatherInfo.css
@@ -81,6 +81,7 @@ ul {
 }
 .day-part {
   float: left;
+  margin: 0 auto;
   padding-top: 15px;
   padding-bottom: 25px;
   width: 16.5%;
@@ -89,15 +90,18 @@ ul {
 .day-name {
   text-align: center;
   font-size: 15px;
+  margin-bottom: 10px;
 }
-.day-img {
+.day_img {
   display: block;
-  margin: 0 auto;
   max-height: 65px;
   max-width: 70px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 .day-tepm {
   text-align: center;
+  margin-top: 10px;
 }
 .tempmax {
   font-size: 15px;
@@ -111,6 +115,7 @@ ul {
 }
 .search {
   text-align: center;
+  margin-top: 20px;
 }
 .searchbox {
   margin: 0 auto;
@@ -120,8 +125,9 @@ ul {
   height: 40px;
   outline: 0;
   padding: 10px;
-  width: 300px;
+  width: 500px;
 }
+
 .surceLine {
   margin-left: 335px;
   margin-top: -15px;
